# temporal-ai-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  activities.py  adding-goals-and-tools.md  agent_prompt_generators.py  architecture-decisions.md  architecture.md  backup_sessions.json  docker-compose.override.yml  docker-compose.yml  end_chat.py  get_history.py  pyproject.toml  run_ollama.py  run_worker.py  send_message.py  setup.md  temporal-ai-agent.sln  tmp-mcp-and-food-goal.diff  tmp-tests-to-add.md  todo.md  workflows.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
activities/: deal_finder_activities.py  tool_activities.py
api/: main.py
dev-tools/: README.md  allow-anthropic.sh  block-anthropic.sh
docs/: README.md  adding-goals-and-tools.md  architecture-decisions.md  architecture.md  contributing.md  setup.md  testing.md  todo.md
ecommerce_goal/: customer_order_data.json  dummy_tracking_data.json  goal_definition.py  tool_definitions.py
enterprise/: Program.cs  SingleOrArrayConverter.cs  TemporalClientHelper.cs  TrainSearchWorker.csproj
enterprise/Activities/: TrainActivities.cs
enterprise/Models/: BookTrainRequest.cs  BookTrainsResponse.cs  Journey.cs  JourneyResponse.cs  SearchTrainsRequest.cs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/components/: ChatWindow.jsx  ConfirmInline.jsx  LLMResponse.jsx  LoadingIndicator.jsx  MessageBubble.jsx  NavBar.jsx
frontend/src/pages/: App.jsx
frontend/src/services/: api.js
goals/: __init__.py  agent_selection.py  ecommerce.py  finance.py  food.py  hr.py  stripe_mcp.py  travel.py
models/: data_types.py  tool_definitions.py
notes/: README.md
notes/experiments/: 000-run-tests.md  001-basic-workflow.md  002-basic-workflow-groq.md  experiment-template.md
notes/learnings/: temporal-concepts.md
notes/resources/: useful-links.md
pinecone/: docker-compose.yaml  preload_vector_data.py  search_groceries.py
pinecone/grocery_data/: store-safeway.json  store-trader-joes.json  store-whole-foods.json
prompts/: agent_prompt_generators.py
scripts/: end_chat.py  find_events_test.py  flight_api_test.py  get_history.py  get_tool_data.py  run_deal_finder_worker.py  run_deal_finder_workflow.py  run_legacy_worker.py  run_worker.py  send_confirm.py  send_message.py
shared/: config.py  llm_manager.py  mcp_client_manager.py  mcp_config.py
tests/: README.md  agent_goal_workflow_test.py  conftest.py  test_agent_goal_workflow.py  test_agent_goal_workflow_execute_prompt.py  test_agent_goal_workflow_validate_prompt.py  test_llm_manager.py  test_mcp_integration.py  test_tool_activities.py  test_workflow_helpers.py
tests/workflowtests/: agent_goal_workflow_test.py
tools/: __init__.py  book_pto.py  calendar_conflict.py  change_goal.py  choose_agent.py  create_invoice.py  current_pto.py  find_events.py  find_fixtures.py  future_pto.py  future_pto_calc.py  give_hint.py  goal_registry.py  guess_location.py  list_agents.py  search_fixtures.py  search_flights.py  search_trains.py  tool_registry.py  transfer_control.py
tools/data/: customer_account_data.json  customer_order_data.json  employee_pto_data.json  find_events_data.json  food_ordering_data.json
tools/ecommerce/: get_order.py  get_order_status.py  list_orders.py  track_package.py
tools/fin/: check_account_valid.py  get_account_balances.py  move_money.py  submit_loan_application.py
tools/food/: add_to_cart.py  check_order_status.py  get_menu.py  get_menu_item_details.py  place_order.py
tools/food/setup/: archive_food_products.py  create_stripe_products.py  stripe_pizza_products.json
tools/hr/: book_pto.py  checkpaybankstatus.py  current_pto.py  future_pto_calc.py
workflows/: agent_goal_workflow.py  deal_finder.py  parent_workflow.py  tool_workflow.py  workflow_helpers.py
